--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta charset="utf-8">
-		<title>SAPUI5 Walkthrough</title>
+		<meta Home page</title>
 		<script
 			id="sap-ui-bootstrap"
 			src="/resources/sap-ui-core.js"
@@ -12,7 +11,7 @@
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-preload="async" >
 		</script>
-		<script>
+		<script>l
 			sap.ui.getCore().attachInit(function () {
 				new sap.m.Text({
 					text : "OpenUI5 is loaded successfully!"
