Updating index page for GH

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta Home page</title>
+		<meta Buna ziua</title>
 		<script
 			id="sap-ui-bootstrap"
 			src="/resources/sap-ui-core.js"
